# cpp_delegates

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
ci/dev_tools/: Dockerfile
doc/: bad_delegate_call.md  delegate.md  function_ptr.md  fwd_delegate.md
doc/delegate/: bad_delegate_call.md  constructor.md  create.md  destructor.md  make_delegate.md  operator_assignment.md  operator_bool.md  operator_cmp_delegate.md  operator_cmp_nullptr.md  operator_function_call.md  swap.md  swap2.md
docker/ci_clang6/: Dockerfile
docker/minreq_ci/: Dockerfile
examples/: assign.cpp  assign_output.txt  bad_delegate_call.cpp  bad_delegate_call_output.txt  basic_examples.cpp  basic_examples_output.txt  check_empty.cpp  check_empty_output.txt  construct.cpp  construct_output.txt  cruise_control.cpp  cruise_control_output.txt  dtor_destroys_target.cpp  dtor_destroys_target_output.txt  empty_after_move.cpp  empty_after_move_output.txt  example.cpp  swap.cpp  test_examples.py
include/me/: delegates.hpp
include/me/delegates/: delegate.hpp  event_delegate.hpp  make_delegate.hpp  make_event_delegate.hpp
include/me/delegates/detail/: asserts.hpp  caller.hpp  event_delegate_argument_check.hpp
include/rome/: delegate.hpp  delegates.hpp  event_delegate.hpp  function_ptr.hpp
include/rome/delegates/: delegate.hpp  event_delegate.hpp  make_delegate.hpp  make_event_delegate.hpp
include/rome/delegates/detail/: asserts.hpp  event_delegate_argument_check.hpp
include/rome/detail/: assertions.hpp  bad_delegate_call.hpp  base_delegate.hpp  delegate_base.hpp  delegate_impl.hpp  delegate_target.hpp  make_delegate.hpp  make_event_delegate.hpp
src/rome/delegates/: delegate.hpp
test/: CMakeLists.txt  check_empty_delegate.hpp  create-clang-tidy-compile-commands.cmake  doctest_main.cpp  test_bad_delegate_call.cpp  test_delegate.cpp  test_delegate2.cpp  test_function_ptr.cpp  test_main.cpp
test/compile_errors/: CMakeLists.txt  compile.cmake  test.cmake  types.h
test/delegate/: test_command_delegate.cpp  test_delegate.cpp  test_event_delegate.cpp
test/delegate/test_delegate/: checks.hpp  mocks.hpp  test_assign_nullptr.cpp  test_bad_delegate_call.cpp  test_construction.cpp  test_create.cpp  test_declaration.hpp  test_declarations.cpp  test_declarations.hpp  test_default_construction.cpp  test_default_construction.hpp  test_delegate_base.cpp  test_delegate_declarations.cpp  test_delegate_target.cpp  test_empty_delegates.cpp  test_explicit_instantiations.cpp  test_move.cpp  test_non_empty_delegates.cpp  test_swap.cpp  test_template_definition.cpp  test_template_param_Behavior.cpp  test_template_param_ExpectedBehavior.cpp  test_template_param_combinations.cpp
test/delegate/test_fwd_delegate/: checks.hpp  delegate_traits.hpp  mocks.hpp  test_assign_nullptr.cpp  test_empty_delegates.cpp  test_move.cpp  test_non_empty_delegates.cpp  test_swap.cpp  test_template_definition.cpp
test/examples/: CMakeLists.txt
test/include/test/: common_delegate_checks.hpp  delegate_traits.hpp  doctest_extensions.hpp  target_mocks.hpp
test/tests/: bad_delegate_call_exception.cpp  command_delegate.cpp  compile_errors.cpp  create_assigned.cpp  create_empty.cpp  drop_target.cpp  event_delegate.cpp  more_function_calls.cpp  move_assign.cpp  move_construct.cpp  polymorphic_targets.cpp  swap.cpp  test_compile_errors.py  type_constraints.cpp
test/tests/detail/: is_immutable_argument.cpp
